--- a/lani/.deliver/config
+++ b/lani/.deliver/config
@@ -4,7 +4,7 @@ APP="lani"
 
 BUILD_HOST="kunvince.com"
 BUILD_USER="deploy"
-BUILD_AT="/home/deploy/apps/$APP/builds"
+BUILD_AT="/home/deploy/app_build"
 
 START_DEPLOY=true
 CLEAN_DEPLOY=true
@@ -14,11 +14,11 @@ GIT_CLEAN_PATHS="_build rel priv/static"
 
 PRODUCTION_HOSTS="kunvince.com"
 PRODUCTION_USER="deploy"
-DELIVER_TO="/home/deploy/apps/$APP/release"
+DELIVER_TO="/home/deploy/app_release"
 
 # For Phoenix projects, symlink prod.secret.exs to our tmp source
 pre_erlang_get_and_update_deps() {
-  local _prod_secret_path="/home/deploy/apps/$APP/secret/prod.secret.exs"
+  local _prod_secret_path="/home/deploy/app_config/prod.secret.exs"
   if [ "$TARGET_MIX_ENV" = "prod" ]; then
     status "Linking '$_prod_secret_path'"
     __sync_remote "
